--- a/bin/application/Sample.fxml
+++ b/bin/application/Sample.fxml
@@ -8,7 +8,7 @@
 <?import javafx.scene.text.Font?>
 
 <BorderPane xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.SampleController">
-   <center>
+   <left>
       <AnchorPane prefHeight="801.0" prefWidth="1233.0" style="-fx-background-color: #80d4ff;" BorderPane.alignment="CENTER">
          <children>
             <Label layoutX="292.0" layoutY="57.0" text="SUPER MARKET BILLING SYSTEM" textFill="#10011b">
@@ -19,13 +19,13 @@
                <font>
                   <Font name="System Bold" size="19.0" />
                </font></Button>
-            <Button fx:id="btncashier" layoutX="723.0" layoutY="201.0" mnemonicParsing="false" text="STAFF">
+            <Button fx:id="btncashier" layoutX="433.0" layoutY="587.0" mnemonicParsing="false" prefHeight="51.0" prefWidth="142.0" text="STAFF">
                <font>
                   <Font name="System Bold" size="24.0" />
                </font></Button>
-            <TextField fx:id="tfusernamelogin" layoutX="372.0" layoutY="316.0" promptText="USERNAME" />
-            <TextField fx:id="tfpasswordlogin" layoutX="372.0" layoutY="385.0" promptText="PASSWORD" />
-            <Button fx:id="btnadminlogin" layoutX="433.0" layoutY="448.0" mnemonicParsing="false" onAction="#handlebuttonloginAction" text="LOGIN" />
+            <TextField fx:id="tfusernamelogin" layoutX="558.0" layoutY="318.0" promptText="USERNAME" />
+            <TextField fx:id="tfpasswordlogin" layoutX="558.0" layoutY="370.0" promptText="PASSWORD" />
+            <Button fx:id="btnadminlogin" layoutX="637.0" layoutY="437.0" mnemonicParsing="false" onAction="#handlebuttonloginAction" text="LOGIN" />
             <Label layoutX="189.0" layoutY="526.0" text="Register Admin?">
                <font>
                   <Font name="System Bold Italic" size="25.0" />
@@ -33,5 +33,5 @@
             </Label>
          </children>
       </AnchorPane>
-   </center>
+   </left>
 </BorderPane>
