--- a/src/application/Staff.fxml
+++ b/src/application/Staff.fxml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.Cursor?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.Tab?>
@@ -9,11 +11,12 @@
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.shape.Line?>
 <?import javafx.scene.text.Font?>
 
 <BorderPane xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.SampleController1">
    <top>
-      <TabPane prefHeight="872.0" prefWidth="1290.0" tabClosingPolicy="UNAVAILABLE" BorderPane.alignment="CENTER">
+      <TabPane prefHeight="872.0" prefWidth="1290.0" style="-fx-background-color: #003cb3;" tabClosingPolicy="UNAVAILABLE" BorderPane.alignment="CENTER">
         <tabs>
           <Tab fx:id="tstaff" text="STAFF">
             <content>
@@ -49,7 +52,7 @@
                               <Font name="System Bold Italic" size="21.0" />
                            </font>
                         </Label>
-                        <Label layoutX="117.0" layoutY="526.0" text="Company No" textFill="#38078d">
+                        <Label layoutX="117.0" layoutY="526.0" text="Company Name" textFill="#38078d">
                            <font>
                               <Font name="System Bold Italic" size="19.0" />
                            </font>
@@ -174,19 +177,17 @@
                               <Font name="System Bold" size="15.0" />
                            </font>
                         </Button>
-                        <TableView fx:id="tvstock" layoutX="491.0" layoutY="21.0" prefHeight="773.0" prefWidth="794.0">
-                          <columns>
-                            <TableColumn fx:id="colproduct_id" maxWidth="5050.0" prefWidth="65.0" text="PRO_ID" />
-                            <TableColumn fx:id="colproduct_name" prefWidth="111.0" text="PRO_NAME" />
-                              <TableColumn fx:id="colstockcomp_name" prefWidth="111.0" text="COMP_NAME" />
-                              <TableColumn fx:id="colstockcategory_name" prefWidth="89.0" text="CAT_NAME" />
-                              <TableColumn fx:id="colexp_date" prefWidth="89.0" text="EXP_DATE" />
-                              <TableColumn fx:id="colquantity" prefWidth="63.0" text="QTY " />
-                              <TableColumn fx:id="colquantity_add" prefWidth="86.0" text="QTY_ADD" />
-                              <TableColumn fx:id="colmrp" minWidth="0.0" prefWidth="77.0" text="MRP" />
-                              <TableColumn fx:id="coldiscount" prefWidth="124.0" text="DISCOUNT" />
-                          </columns>
-                        </TableView>
+                        <Label alignment="CENTER" layoutX="793.0" layoutY="347.0" onMouseClicked="#handleMouseActionstock" prefHeight="36.0" prefWidth="339.0" text="Click here Stock details" textFill="#38078d">
+                           <font>
+                              <Font name="System Bold Italic" size="24.0" />
+                           </font>
+                           <cursor>
+                              <Cursor fx:constant="HAND" />
+                           </cursor>
+                           <opaqueInsets>
+                              <Insets />
+                           </opaqueInsets></Label>
+                        <Line endX="219.0" layoutX="881.0" layoutY="378.0" startX="-56.0" />
                      </children></AnchorPane>
             </content>
           </Tab>
