--- a/src/application/Staff.fxml
+++ b/src/application/Staff.fxml
@@ -193,7 +193,11 @@
           </Tab>
             <Tab fx:id="tsales" text="SALES">
                <content>
-                  <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" style="-fx-background-color: #80d4ff;" />
+                  <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" style="-fx-background-color: #80d4ff;">
+                     <children>
+                        <Label layoutX="296.0" layoutY="184.0" text="Label" />
+                        <TextField layoutX="477.0" layoutY="179.0" />
+                     </children></AnchorPane>
                </content>
             </Tab>
         </tabs>
