--- a/bin/application/Sample.fxml
+++ b/bin/application/Sample.fxml
@@ -5,19 +5,22 @@
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.effect.Glow?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.shape.Line?>
 <?import javafx.scene.text.Font?>
 
 <BorderPane xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.SampleController">
-   <left>
+   <top>
       <AnchorPane prefHeight="801.0" prefWidth="1233.0" style="-fx-background-color: #80d4ff;" BorderPane.alignment="CENTER">
          <children>
-            <Label alignment="CENTER" prefHeight="77.0" prefWidth="1234.0" style="-fx-background-color: #33cc33;" text="SUPER MARKET BILLING SYSTEM" textFill="#10011b">
+            <Label alignment="CENTER" layoutX="175.0" layoutY="90.0" prefHeight="77.0" prefWidth="954.0" text="SUPER MARKET BILLING SYSTEM" textFill="#003cb3">
                <font>
-                  <Font name="System Bold" size="39.0" />
+                  <Font name="Arial Rounded MT Bold" size="39.0" />
                </font></Label>
-            <Button fx:id="btnadmin" layoutX="464.0" layoutY="545.0" mnemonicParsing="false" onAction="#handlebuttonadmin" prefHeight="42.0" prefWidth="398.0" style="-fx-background-color: #003cb3;" text="ADMIN REGISTRATION" textFill="WHITE">
+            <Button fx:id="btnadmin" layoutX="181.0" layoutY="535.0" mnemonicParsing="false" onAction="#handlebuttonadmin" prefHeight="42.0" prefWidth="398.0" style="-fx-background-color: #003cb3;" text="ADMIN REGISTRATION" textFill="WHITE">
                <font>
                   <Font name="System Bold" size="19.0" />
                </font>
@@ -27,9 +30,9 @@
                <effect>
                   <Glow />
                </effect></Button>
-            <TextField fx:id="tfusernamelogin" layoutX="458.0" layoutY="293.0" prefHeight="56.0" prefWidth="402.0" promptText="USERNAME" />
-            <TextField fx:id="tfpasswordlogin" layoutX="462.0" layoutY="358.0" prefHeight="56.0" prefWidth="400.0" promptText="PASSWORD" />
-            <Button fx:id="btnadminlogin" layoutX="465.0" layoutY="427.0" mnemonicParsing="false" onAction="#handlebuttonloginAction" prefHeight="42.0" prefWidth="395.0" style="-fx-background-color: #003cb3;" text="LOGIN" textFill="WHITE">
+            <TextField fx:id="tfusernamelogin" layoutX="737.0" layoutY="373.0" prefHeight="56.0" prefWidth="402.0" promptText="USERNAME" />
+            <TextField fx:id="tfpasswordlogin" layoutX="738.0" layoutY="446.0" prefHeight="56.0" prefWidth="400.0" promptText="PASSWORD" />
+            <Button fx:id="btnadminlogin" layoutX="737.0" layoutY="531.0" mnemonicParsing="false" onAction="#handlebuttonloginAction" prefHeight="42.0" prefWidth="395.0" style="-fx-background-color: #003cb3;" text="LOGIN" textFill="WHITE">
                <font>
                   <Font name="System Bold" size="19.0" />
                </font>
@@ -39,12 +42,23 @@
                <effect>
                   <Glow />
                </effect></Button>
-            <Label alignment="CENTER" layoutX="464.0" layoutY="500.0" prefHeight="33.0" prefWidth="395.0" text="Don't have an Account? Register Here!">
+            <Label alignment="CENTER" layoutX="181.0" layoutY="486.0" prefHeight="33.0" prefWidth="395.0" text="Don't have an Account? Register Here!">
                <font>
                   <Font name="System Bold" size="18.0" />
                </font>
             </Label>
+            <ImageView fitHeight="395.0" fitWidth="389.0" layoutX="184.0" layoutY="323.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../../images/1log.png" />
+               </image>
+            </ImageView>
+            <Line endX="-49.0" endY="-76.0" layoutX="696.0" layoutY="249.0" startX="-49.0" startY="522.0" />
+            <Label layoutX="886.0" layoutY="303.0" text="Sign Up" textFill="#003cb3">
+               <font>
+                  <Font name="System Bold" size="30.0" />
+               </font>
+            </Label>
          </children>
       </AnchorPane>
-   </left>
+   </top>
 </BorderPane>
